[tool.poetry]
name = "racelens-serverless"
version = "0.0.1"
description = ""
authors = ["Sebastian Marines <sebastian0marines@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.dev-dependencies]
boto3 = "^1.21.8"
mypy = "^0.931"
cfn-lint = "^0.58.2"
aws-sam-cli = "^1.40.0"
ipython = "^8.1.0"
boto3-stubs = "^1.21.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
